src/objects/ADvendio__TabDefinition__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Columns__c</fullName>
        <label>Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__StaticFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Static Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__SumUpColumns__c</fullName>
        <label>Sum Up Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Types__c</fullName>
        <description>Describes for what types the tab will be shown.</description>
        <label>Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Tab Setup</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>ADvendio__SortOrder__c</columns>
        <columns>NAME</columns>
        <columns>ADvendio__Columns__c</columns>
        <columns>ADvendio__Types__c</columns>
        <columns>ADvendio__SumUpColumns__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Tab Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tab Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>